# koike_robo_sandbox

./: .gitignore  README.md  plane_detection_approach.md  requirements.txt
.claude/: claude.md
datasets/: README.md
datasets/eth3d/: README.md
datasets/robocup/: README.md
datasets/robocup/storing_try_2/: frames_2025-11-30_23.33.49.gv
datasets/tum_rgbd/: README.md
datasets/vector/: README.md
datasets/voxblox/: README.md
plane_detector/: README.md  package.xml  plane_detector_analysis.md  setup.cfg  setup.py
plane_detector/config/: plane_detection.rviz
plane_detector/launch/: plane_detection.launch.py
plane_detector/plane_detector/: plane_detector_node.py  plane_recorder_node.py
plane_detector/scripts/: run_plane_detection.sh
plane_tuner/: README.md  plane_tuner.py  requirements.txt
plane_tuner/core/: __init__.py  image_loader.py  plane_detector.py  point_cloud.py
plane_tuner/gui/: __init__.py  image_canvas.py  main_window.py  parameter_panel.py
rgbd_visualizer/: README.md  package.xml  setup.cfg  setup.py
rgbd_visualizer/config/: rosbag_rgbd.rviz
rgbd_visualizer/launch/: rosbag_rviz.launch.py  rviz_visualize.launch.py  visualize_tum.launch.py
rgbd_visualizer/rgbd_visualizer/: __init__.py  bag_publisher.py  pointcloud_generator.py  rgbd_viewer.py
scripts/: README.md  visualize_rgbd.py  visualize_rosbag.py
